--- a/src/web/swagger-ui.html
+++ b/src/web/swagger-ui.html
@@ -14,11 +14,12 @@
   <script src='webjars/springfox-swagger-ui/lib/jquery.slideto.min.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/lib/jquery.wiggle.min.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-  <script src='webjars/springfox-swagger-ui/lib/handlebars-2.0.0.js' type='text/javascript'></script>
-  <script src='webjars/springfox-swagger-ui/lib/underscore-min.js' type='text/javascript'></script>
+  <script src='webjars/springfox-swagger-ui/lib/handlebars-4.0.5.js' type='text/javascript'></script>
+  <script src='webjars/springfox-swagger-ui/lib/lodash.min.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/lib/backbone-min.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/swagger-ui.min.js' type='text/javascript'></script>
-  <script src='webjars/springfox-swagger-ui/lib/highlight.7.3.pack.js' type='text/javascript'></script>
+  <script src='webjars/springfox-swagger-ui/lib/highlight.9.1.0.pack.js' type='text/javascript'></script>
+  <script src='webjars/springfox-swagger-ui/lib/highlight.9.1.0.pack_extended.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/lib/jsoneditor.min.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/lib/marked.js' type='text/javascript'></script>
   <script src='webjars/springfox-swagger-ui/lib/swagger-oauth.js' type='text/javascript'></script>
